# flowcapital-credit-score

./: .env.example  .gitignore  CLAUDE.md  GUIA_AWS_HACKATHON.txt  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml
backend/autenticacao/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/autenticacao/migrations/: 0001_initial.py
backend/core/: aws_services.py  belvo_service.py  pluggy_service.py  settings.py  urls.py  views.py
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  quasar.config.js
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: AdminPage.vue  DashboardPage.vue  IndexPage.vue  LoginPage.vue  RegisterPage.vue
frontend/src/router/: routes.js
